--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "start": "sirv public --host 0.0.0.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.10.2",
+    "@rollup/plugin-babel": "^5.0.2",
     "@rollup/plugin-commonjs": "11.0.2",
     "@rollup/plugin-json": "^4.0.3",
     "@rollup/plugin-node-resolve": "^7.0.0",
