--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.10.2",
+    "@babel/preset-env": "^7.10.2",
     "@rollup/plugin-babel": "^5.0.2",
     "@rollup/plugin-commonjs": "11.0.2",
     "@rollup/plugin-json": "^4.0.3",
