Let gif.js do the web worker stuff as recommended, in hopes that it works non-glitchily on Safari.

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "svelte": "^3.0.0"
   },
   "dependencies": {
+    "errorback-promise": "^1.0.0",
     "gif.js": "github:jimkang/gif.js",
     "sirv-cli": "^0.4.4"
   }
